--- a/bjs/07_Number_and_string/index.html
+++ b/bjs/07_Number_and_string/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Калькулятор</title>
+    <title>калькулятор</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        integrity="sha384-Vkoo8x4CGsО3+Hhxv8T/Q5PaXtkKtu6ug5TОeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" type="text/css"/>
 </head>
@@ -21,11 +21,45 @@
                                 <button class="btn btn-outline-danger form-control" id="btn_clr">C</button>
                             </div>
                         </div>
+                        <div class="row no-gutters">
+                            <div class="col" style="width: 100%">
+                                <button class="btn btn-outline-primary form-control" id="btn_1" style="width: 25%">1</button>
+                                <button class="btn btn-outline-primary form-control" id="btn_2" style="width: 25%">2</button>
+                                <button class="btn btn-outline-primary form-control" id="btn_3" style="width: 25%">3</button>
+                                <button class="btn btn-outline-primary form-control" id="btn_+" style="width: 25%">+</button>
+                            </div>
+                        </div>
+                        <div class="row no-gutters">
+                            <div class="col" style="width: 100%">
+                                <button class="btn btn-outline-primary form-control" id="btn_4" style="width: 25%">4</button>
+                                <button class="btn btn-outline-primary form-control" id="btn_5" style="width: 25%">5</button>
+                                <button class="btn btn-outline-primary form-control" id="btn_6" style="width: 25%">6</button>
+                                <button class="btn btn-outline-primary form-control" id="btn_-" style="width: 25%">-</button>
+                            </div>
+                        </div>
+                       
+                        <div class="row no-gutters">
+                            <div class="col" style="width: 100%">
+                                <button class="btn btn-outline-primary form-control" id="btn_7" style="width: 25%">7</button>
+                                <button class="btn btn-outline-primary form-control" id="btn_8" style="width: 25%">8</button>
+                                <button class="btn btn-outline-primary form-control" id="btn_9" style="width: 25%">9</button>
+                                <button class="btn btn-outline-primary form-control" id="btn_*" style="width: 25%">*</button>
+                            </div>
+                        </div>
+                        
+                            <div class="row no-gutters">
+                            <div class="col" style="width: 100%">
+                                <button class="btn btn-outline-primary form-control" id="btn_=" style="width: 25%">=</button>
+                                <button class="btn btn-outline-primary form-control" id="btn_0" style="width: 25%">0</button>
+                                <button class="btn btn-outline-primary form-control" id="btn_V" style="width: 25%">V</button>
+                                <button class="btn btn-outline-primary form-control" id="btn_/" style="width: 25%">/</button>
+                            </div>
+                        </div>
+                        </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
 </div>
 <script src="script.js"></script>
 </body>
